--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -27,12 +27,16 @@ windows = { version = "0.58", features = [
     "Win32_System_Diagnostics_ToolHelp",
     "Win32_Security",
     "Data_Xml_Dom",
-    "UI_Notifications"
+    "UI_Notifications",
+    "Win32_Graphics_Gdi",
+    "Win32_System_EventLog",
 ]}
 notify-rust = "4"
 wmi = "0.13"
+image = "0.24"
 
 [profile.release]
 opt-level = "z"
 lto = true
 strip = true
+
