--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,11 +11,13 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.0",
     "lucide-react": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.12.0"
   },
